# DatalakePractice

./: README.md
data/: README.md
data/raw/customers/: customers.csv
data/raw/orders/year=2026/month=06/day=01/: orders.csv
data/raw/orders/year=2026/month=06/day=02/: orders.csv
data/raw/products/: products.csv
data/raw/web_events/year=2026/month=06/day=01/: events.jsonl
pipelines/: pyproject.toml  reference_raw_bronze_adf.py
pipelines/dashboard/: app.js  index.html  styles.css
pipelines/operations/: __main__.py  upload_sample.py
pipelines/pipelines/: __init__.py  utils.py
pipelines/pipelines/database/: connect.py  data_factory.py  datasets.py  linked_service.py  pipeline.py  spark_service.py
pipelines/pipelines/operations/: __main__.py  build_bronze.py  fake_ingestion.py  serve_dashboard.py  upload_sample.py
pipelines/pipelines/transforms/: bronze_to_silver_orders.py  silver_to_gold_sales.py
