[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-mgmt-datafactory>=9.3.0",
    "azure-storage-file-datalake>=12.25.0",
    "click>=8.3.1",
    "pyspark>=4.1.2",
    "ruff>=0.15.20",
]

[project.scripts]
operations = "pipelines.operations.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]
